News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/NXX2_TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This will be used to disable trigger</description>
    <label>NXX2 TriggerSettings</label>
</CustomObject>