News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/AccountTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>AccountTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>