News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/ContactTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>ContactTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>