News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/CustomerActivityTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>CustomerActivityTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomerActivityTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>