News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/CustomerRoleAccessTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>CustomerRoleAccessTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomerRoleAccessTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>