News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/FeedCommentTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>FeedCommentTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FeedCommentTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>