News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/OpportunityTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpportunityTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>