News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/ProofTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>ProofTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProofTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>