News UAT/force-app/main/default/objects/NXX2_TriggerSettings__c/fields/UserTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>UserTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UserTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>